# template-deno-rust-library

./: .gitignore  Cargo.toml  README.md  build.rs  deps.ts
.github/workflows/: lint-deno.yml  release-deno-rust-library.yml  run-deno-rust-docs-and-tests.yml
bindings/: bindings.ts
images/: uml_diagram.mermaid
src/: lib.rs  lib.ts
tests/: integration_test.rs  world_test.ts
