[package]
name = "flowscripter_template_deno_rust_library"
version ="1.0.7"
edition = "2021"
description = "Project template for a Rust library with Deno FFI bindings."
homepage = "https://github.com/flowscripter"
license = "MIT"
repository = "https://github.com/flowscripter/template-deno-rust-library"
exclude = [".github/", "bindings/"]

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
deno_bindgen = "0.5.1"
serde = { version = "1.0.137", features = ["derive"] }
flowscripter_template_rust_library = "1.1.3"
