[package]
name = "flowscripter_template_deno_rust_library"
version ="1.0.11"
edition = "2021"
description = "Project template for a Rust library with Deno FFI bindings."
homepage = "https://github.com/flowscripter"
license = "MIT"
repository = "https://github.com/flowscripter/template-deno-rust-library"
exclude = [".github/", "bindings/"]

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
deno_bindgen = { git = "https://github.com/vectronic/deno_bindgen", tag = "0.7.0-1-temp" }
serde = { version = "1.0.144", features = ["derive"] }
flowscripter_template_rust_library = "1.1.5"
